fix(wearable) Fix wrong color in DatePicker [OAPTAU-959]
 - color is now correct set
 - UI-tests still show different, but it is checked that color is correct
   take from table T277

--- a/tau/src/css/profile/wearable/changeable/theme-circle/datepicker.less
+++ b/tau/src/css/profile/wearable/changeable/theme-circle/datepicker.less
@@ -58,6 +58,7 @@
 		line-height: 32 * @unit_base;
 		height: 32 * @unit_base;
 		padding: 0 45 * @unit_base;
+		color: @color_date_picker_dayname;
 	}
 }
 
